add liquidator logic, core written in c++